# Law-Agent

./: .env.example  .gitignore  CLAUDE.md  DEV_PLAN.md  GEMINI.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: chat.py  health.py  law.py  personas.py
backend/app/core/: agent.py  llm_provider.py  mcp_client.py  personas.py  streaming.py
backend/app/models/: schemas.py
backend/app/utils/: llm_utils.py  logger.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  LawViewer.tsx  MessageBubble.tsx  PersonaSelector.tsx  SourceCard.tsx  ToolBadge.tsx
frontend/src/hooks/: useChat.ts  useChatHistory.ts
frontend/src/lib/: api.ts  lawParser.ts  types.ts
