[project]
name = "law-agent-backend"
version = "0.1.0"
description = "SKEC Law Agent Backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "anthropic>=0.52",
    "openai>=1.60",
    "mcp>=1.26",
    "sse-starlette>=2.2"
]
